--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,11 @@
-<% provide(:title, 'Home') %>
-<h1>Sample Project</h1>
+<%provide(:title, 'Home')%>
+<div class="center hero-unit">
+  <h1>Welcome to Mua</h1>
+
+  <h2>
+   This is a gift from Buer to Yibao 
+  </h2>
+
+  <%= link_to "Login", '#', class: "btn btn-large btn-primary" %>
+</div>
+
