finish user action

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -7,10 +7,10 @@
   <body>
     <h1>Help</h1>
     <p>
-      Get help on the Ruby on Rails Tutorial at the
-      <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
-      To get help on this sample app, see the
-      <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
+			<center>如果需要帮助</center>
+			<h2>
+				请轰炸老公 on 尾号<u>8605</u>，竭诚为老婆服务
+			</h2>
     </p>
   </body>
 </html>
