--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,6 +6,6 @@
    This is a gift from Buer to Yibao 
   </h2>
 
-  <%= link_to "Login", '#', class: "btn btn-large btn-primary" %>
+  <%= link_to "Login", 'sessions/new', class: "btn btn-large btn-primary" %>
 </div>
 
