--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -74,8 +74,8 @@ p {
 /*footer*/
 
 footer {
-  margin-top: 45px;
-  padding-top: 5px;
+  margin-top: 275px;
+  padding-top: 15px;
   border-top: 1px solid #eaeaea;
   color: #999;
 }
@@ -175,4 +175,19 @@ input {
 .field_with_errors {
   @extend .control-group;
   @extend .error;
+}
+
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid $grayLighter;
+    &:last-child {
+      border-bottom: 1px solid $grayLighter;
+    }
+  }
 }
