--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,27 @@
 <%provide(:title, 'Home')%>
+<% if signed_in? %>
+<div class="row">
+    <aside class="span4">
+      <section>
+        <%= render 'shared/user_info' %>
+      </section>
+      <section>
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+	
+	<div class="span8">
+      <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %>
+  </div>
+</div>
+<%else%>
 <div class="center hero-unit">
   <h1>Welcome to Mua</h1>
 
   <h2>
    This is a gift from Buer to Yibao 
   </h2>
-
   <%= link_to "Login", 'sessions/new', class: "btn btn-large btn-primary" %>
 </div>
-
+<%end%>
