--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -47,6 +47,12 @@ h2 {
   color: #999;
 }
 
+h6 {
+  font-size: 1.2em;
+  font-weight: normal;
+  color: #999;
+}
+
 p {
   font-size: 1.1em;
   line-height: 1.7em;
@@ -249,3 +255,31 @@ aside {
   }
 }
 
+/* Upload file*/
+
+#test {
+    position: relative;
+}
+
+#test .wrapper {
+    opacity: 0;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    z-index: 2;
+}
+
+#test .wrapper:hover {
+    opacity: 0.5;
+}
+
+#test button {
+    background-color: #ccc;
+    border: none;
+    color: #666;
+    padding: 3px 5px;
+    border-radius: 5px;
+    position: relative;
+    top: 0;
+    z-index: 1;
+}
