--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,20 +4,20 @@
           <%= link_to "Mua", '#', id: "logo" %>
           <nav>
             <ul class="nav pull-right">
-              <li><%= link_to "Home", root_path %></li>
-              <li><%= link_to "Help", help_path %></li>
+              <li><%= link_to "主页", root_path %></li>
+              <li><%= link_to "帮助", help_path %></li>
 							<%if signed_in?%>
-							<li><%= link_to "Users", users_path %></li>
+						<!--	<li><%= link_to "用户", users_path %></li> -->
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Account <b class="caret"></b>
+                我的帐号管理<b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+                <li><%= link_to "档案", current_user %></li>
+                <li><%= link_to "设置", edit_user_path(current_user) %></li>
                 <li class="divider"></li>
                 <li>
-                  <%= link_to "Sign out", signout_path, method: "delete" %>
+                  <%= link_to "登出", signout_path, method: "delete" %>
                 </li>
               </ul>
             </li>
