--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,7 +14,7 @@
     </aside>
 	
 	<div class="span8">
-      <h3>Micropost Feed</h3>
+      <h3>最新动态:</h3>
       <%= render 'shared/feed' %>
   </div>
 </div>
