--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -4,7 +4,8 @@
     <%= link_to feed_item.user.name, feed_item.user %>
   </span>
   <span class="content"><%= feed_item.content %></span>
-	<span class="content"><%=link_to image_tag(feed_item.photo.url(:thumb)), feed_item.photo.url(:original), :popup=>['original_image', 'height=350,width=450'] %>
+	<span class="content"><%=link_to image_tag(feed_item.photo.url(:thumb)),
+					 feed_item.photo.url(:original), :popup=>['original_image', 'height=350,width=450'] %>
 	</span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
