--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,6 +10,11 @@ body {
 	padding-top: 40px;
 }
 
+html body{
+	background: url('ali1.jpg');
+;
+}
+
 section {
 	overflow: auto;
 }
@@ -283,3 +288,4 @@ aside {
     top: 0;
     z-index: 1;
 }
+
