--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,10 +20,10 @@
 </div>
 <%else%>
 <div class="center hero-unit">
-  <h1>Welcome to Mua</h1>
+  <h1>情人节快乐</h1>
 
   <h2>
-   This is a gift from Buer to Yibao 
+			-爱你的老公	
   </h2>
   <%= link_to "Login", 'sessions/new', class: "btn btn-large btn-primary" %>
 </div>
