--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -69,8 +69,10 @@ p {
 	float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: #fff;
-  text-transform: uppercase;
+  color: #C0C0C0;
+
+ /* text-transform: uppercase;*/
+
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
