--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -20,5 +20,5 @@
 
 
   </div>
-  <%= f.submit "Post", class: "btn btn-large btn-primary" %>
+  <%= f.submit "发布~", class: "btn btn-large btn-primary" %>
 <% end %>
